change type to kind

--- a/schema/codegen-schema/auth/password.canonical.yaml
+++ b/schema/codegen-schema/auth/password.canonical.yaml
@@ -1,51 +1,51 @@
 kinds:
   - password-requirement-body: &password-requirement-body
       - kind: canonical:/id
-      - type: string
+      - kind: string
         name: name
         description: Descriptive name for the password requirements
         min: 1
         max: 25
       - name: length
-        type: integer
+        kind: integer
         description: The password length.
         default: 12
         min: 6
         max: 50
         required: true
       - name: letter-count
-        type: integer
+        kind: integer
         description: The number of letter characters.
         min: 0
       - name: lowercase-count
-        type: integer
+        kind: integer
         description: The number of lower case characters.
         min: 0
       - name: uppercase-count
-        type: integer
+        kind: integer
         description: The number of upper case characters.
         min: 0
       - name: number-count
         description: The number of number characters.
-        type: integer
+        kind: integer
         min: 0
       - name: symbol-count
         description: The number of symbol characters.
-        type: integer
+        kind: integer
         min: 0
   # ==========================================================================================
   #  Password Requirements
   # ==========================================================================================
   - id: canonical:auth/password-requirement-model
     description: Password requirements
-    type: object
+    kind: object
     properties:
       - kind: canonical:id
       - <<: *password-requirement-body
 
   - id: canonical:auth/password-requirement-retrieve-request
     description: Password requirements
-    type: object
+    kind: object
     properties:
       - name: tracking-id
         kind: canonical:id
@@ -53,7 +53,7 @@ kinds:
 
   - id: canonical:auth/password-requirement-create-request
     description: Password requirements
-    type: object
+    kind: object
     properties:
       - name: tracking-id
         kind: canonical:id
@@ -61,7 +61,7 @@ kinds:
 
   - id: canonical:auth/password-requirement-delete-request
     description: Password requirements
-    type: object
+    kind: object
     properties:
       - name: tracking-id
         kind: canonical:id
@@ -69,7 +69,7 @@ kinds:
 
   - id: canonical:auth/password-requirement-update-request
     description: Password requirements
-    type: object
+    kind: object
     properties:
       - name: tracking-id
         kind: canonical:id
@@ -88,51 +88,51 @@ operations:
 kinds:
   - id: canonical:auth/username-password-model
     description: Username and password credentials information
-    type: object
+    kind: object
     properties:
       - kind: canonical:id
       - name: name
         description: A descriptive name for this username / password pair.
-        type: string
+        kind: string
         max: 25
       - kind: canonical:util/description
       - name: username
         description: The username
-        type: string
+        kind: string
         min: 1
         max: 50
         required: true
       - name: password
         description: The password
-        type: string
+        kind: string
         min: 1
         max: 50
         required: true
 
   - id: https://www.boundedinfinity.com/type/auth/username-password-create-request
-    type: object
+    kind: object
     description: A username and password credentials create request
     properties:
-      - type: array
+      - kind: array
         name: credentials
         items:
           ref: https://www.boundedinfinity.com/type/auth/username-password
         required: true
         min: 1
   - id: https://www.boundedinfinity.com/type/auth/username-password-create-response
-    type: object
+    kind: object
     description: A username and password credentials create response
     properties:
-      - type: array
+      - kind: array
         name: credentials
         items:
           ref: https://www.boundedinfinity.com/type/auth/username-password
         required: true
         min: 1
       - name: errors
-        type: array
+        kind: array
         items:
-          type: string
+          kind: string
 operations:
   - id: canonical:auth/username-password-create
     name: create
