--- a/schema/codegen-schema/util/email.canonical.yaml
+++ b/schema/codegen-schema/util/email.canonical.yaml
@@ -1,5 +1,4 @@
 kinds:
-    -   id: canonical:util/email
-        type: string
-        max: 200
-        
+    - id: canonical:util/email
+      kind: string
+      max: 200
