--- a/schema/codegen-schema/auth/security-question.canonical.yaml
+++ b/schema/codegen-schema/auth/security-question.canonical.yaml
@@ -1,17 +1,17 @@
 kinds:
-    -   id: canonical:auth/security-question
-        description: Account security questions
-        type: object
-        properties:
-            -   name: question
-                description: The security question
-                type: string
-                min: 1
-                max: 200
-                required: true
-            -   name: answer
-                description: The security answer
-                type: string
-                min: 1
-                max: 200
-                required: true
+    - id: canonical:auth/security-question
+      description: Account security questions
+      kind: object
+      properties:
+          - name: question
+            description: The security question
+            kind: string
+            min: 1
+            max: 200
+            required: true
+          - name: answer
+            description: The security answer
+            kind: string
+            min: 1
+            max: 200
+            required: true
