--- a/schema/codegen-schema/id/ulid.canonical.yaml
+++ b/schema/codegen-schema/id/ulid.canonical.yaml
@@ -1,9 +1,15 @@
 # https://github.com/boundedinfinity/specification/blob/master/id/ulid.md
 
 kinds:
-    -   id: canonical:id/ulid
-        name: ULID
-        type: string
-        min: 36
-        max: 36
-        regex: '[0-9a-fA-F]{8}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{12}'
+    - id: canonical:id/ulid
+      name: ULID
+      description: >
+          A Universally Unique Lexicographically Sortable Identifier.
+
+          Specifications located at:
+
+          - https://github.com/ulid/spec
+      kind: string
+      min: 36
+      max: 36
+      regex: '[0-9a-fA-F]{8}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{12}'
