--- a/schema/codegen-schema/people/suffix.canonical.yaml
+++ b/schema/codegen-schema/people/suffix.canonical.yaml
@@ -1,92 +1,92 @@
 kinds:
-    - id: canonical:people/suffix
-      description: |
-          The suffix of a personal name.
+  - id: canonical:people/suffix
+    description: |
+      The suffix of a personal name.
 
-          A name suffix is a word, words or abbreviation that follows a person's full
-          name and provides additional information about the person.
-      type: object
-      properties:
-          - name: id
-            type: ref
-            ref: canonical://id
-          - name: name
-            type: string
-            min: 1
-            max: 50
-            required: true
-          - name: abbreviations
-            type: array
-            items:
-                type: string
-                min: 1
-                max: 10
-          - type: ref
-            ref: canonical://util/description
+      A name suffix is a word, words or abbreviation that follows a person's full
+      name and provides additional information about the person.
+    kind: object
+    properties:
+      - name: id
+        kind: ref
+        ref: canonical://id
+      - name: name
+        kind: string
+        min: 1
+        max: 50
+        required: true
+      - name: abbreviations
+        kind: array
+        items:
+          kind: string
+          min: 1
+          max: 10
+      - kind: ref
+        ref: canonical://util/description
 
-    - id: canonical:people/suffix-format
-      description: The suffix format of a personal name.
-      type: object
-      properties:
-          - name: id
-            type: ref
-            ref: canonical://id
-          - name: name
-            type: string
-            min: 1
-            max: 50
-            required: true
-            indexed: true
-          - type: ref
-            ref: canonical://util/description
+  - id: canonical:people/suffix-format
+    description: The suffix format of a personal name.
+    kind: object
+    properties:
+      - name: id
+        kind: ref
+        ref: canonical://id
+      - name: name
+        kind: string
+        min: 1
+        max: 50
+        required: true
+        indexed: true
+      - kind: ref
+        ref: canonical://util/description
 
 operations:
-    - kind: canonical:people/suffix
-      id: canonical:people/suffix/create
-      name: create
-      input:
-          - ref: canonical://people/suffix
-      output:
-          - ref: canonical://people/suffix
+  - kind: canonical:people/suffix
+    id: canonical:people/suffix/create
+    name: create
+    input:
+      - ref: canonical://people/suffix
+    output:
+      - ref: canonical://people/suffix
 data:
-    # https://en.wikipedia.org/wiki/English_honorifics
-    - kind: canonical:people/suffix
-      id: 4DB6DE73-B31F-4EA7-A9BB-4930920BD5F0
-      name: Bachelor of Arts
-      abbreviation: BA
-      description: |
-          A degree from a university or other higher learning instituion awarded 
-          for an undergraduate program in the arts or other disciplines.
-    - kind: canonical:people/suffix
-      id: D5E4E33C-F2B2-4853-8FD9-A29F903E01D1
-      abbreviation: AB
-      ref: canonical://people/suffix/ba
-    - kind: canonical:people/suffix
-      id: 97FB22CC-2976-467E-B460-3D766090DCBB
-      name: Bachelor of Science
-      abbreviation: BA
-      description: |
-          A degree from a university or other higher learning instituion awarded
-          for an undergraduate program in the sciences.
-    - kind: canonical:people/suffix
-      id: B48FB009-AF28-4934-8E5F-EBC278C72E82
-      abbreviation: B.Sc.
-      ref: canonical://people/suffix/bs
-    - kind: canonical:people/suffix
-      id: canonical://people/suffix/sb
-      abbreviation: SB
-      ref: canonical://people/suffix/sb
-    - kind: canonical:people/suffix
-      id: 49062FE9-C330-4446-B6A0-55513F57BABA
-      abbreviation: ScB
-      ref: canonical://people/scb
-    - kind: canonical:people/suffix
-      id: 57947AFF-6047-4E41-BFB0-37DAFB7598DD
-      name: Master of Business Administration
-      abbreviation: MBA
-      reference: https://en.wikipedia.org/wiki/Master_of_Business_Administration
-    - kind: canonical:people/suffix
-      id: 25E2A409-6228-4828-A87F-B4A468C2344A
-      name: Master of Economics
-      abbreviation: MEc
-      reference: https://en.wikipedia.org/wiki/Master_of_Economics
+  # https://en.wikipedia.org/wiki/English_honorifics
+  - kind: canonical:people/suffix
+    id: 4DB6DE73-B31F-4EA7-A9BB-4930920BD5F0
+    name: Bachelor of Arts
+    abbreviation: BA
+    description: |
+      A degree from a university or other higher learning instituion awarded 
+      for an undergraduate program in the arts or other disciplines.
+  - kind: canonical:people/suffix
+    id: D5E4E33C-F2B2-4853-8FD9-A29F903E01D1
+    abbreviation: AB
+    ref: canonical://people/suffix/ba
+  - kind: canonical:people/suffix
+    id: 97FB22CC-2976-467E-B460-3D766090DCBB
+    name: Bachelor of Science
+    abbreviation: BA
+    description: |
+      A degree from a university or other higher learning instituion awarded
+      for an undergraduate program in the sciences.
+  - kind: canonical:people/suffix
+    id: B48FB009-AF28-4934-8E5F-EBC278C72E82
+    abbreviation: B.Sc.
+    ref: canonical://people/suffix/bs
+  - kind: canonical:people/suffix
+    id: canonical://people/suffix/sb
+    abbreviation: SB
+    ref: canonical://people/suffix/sb
+  - kind: canonical:people/suffix
+    id: 49062FE9-C330-4446-B6A0-55513F57BABA
+    abbreviation: ScB
+    ref: canonical://people/scb
+  - kind: canonical:people/suffix
+    id: 57947AFF-6047-4E41-BFB0-37DAFB7598DD
+    name: Master of Business Administration
+    abbreviation: MBA
+    reference: https://en.wikipedia.org/wiki/Master_of_Business_Administration
+  - kind: canonical:people/suffix
+    id: 25E2A409-6228-4828-A87F-B4A468C2344A
+    name: Master of Economics
+    abbreviation: MEc
+    reference: https://en.wikipedia.org/wiki/Master_of_Economics
