--- a/schema/codegen-schema/util/description.canonical.yaml
+++ b/schema/codegen-schema/util/description.canonical.yaml
@@ -1,6 +1,6 @@
 kinds:
-    -   id: canonical:util/description
-        type: string
-        name: description
-        min: 5
-        max: 200
+    - id: canonical:util/description
+      kind: string
+      name: description
+      min: 5
+      max: 200
