--- a/schema/codegen-schema/util/reference.canonical.yaml
+++ b/schema/codegen-schema/util/reference.canonical.yaml
@@ -1,6 +1,6 @@
 kinds:
-    - id: canonical:util/reference
-      type: object
-      properties:
-          - kind: canonical:util/name-20
-          - urls:
+  - id: canonical:util/reference
+    kind: object
+    properties:
+      - kind: canonical:util/name-20
+      - urls:
