--- a/example/go/idiomatic/bookkeeping/bookkeeping-type.enum.yaml
+++ b/example/go/idiomatic/bookkeeping/bookkeeping-type.enum.yaml
@@ -17,8 +17,8 @@ values:
                 - [What Credit (CR) and Debit (DR) Mean on a Balance Sheet]
                 - [T-Account: Definition, Example, Recording, and Benefits]
           
-            [Debit: Definition and Relationship to Credit]https://www.investopedia.com/terms/d/debit.asp
-            [T-Account: Definition, Example, Recording, and Benefits]https://www.investopedia.com/terms/t/t-account.asp
+            [Debit: Definition and Relationship to Credit](https://www.investopedia.com/terms/d/debit.asp)
+            [T-Account: Definition, Example, Recording, and Benefits](https://www.investopedia.com/terms/t/t-account.asp)
 
     -   name: Credit
         desc: >
