--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,9 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-        
-      
+        {
+            "name": "Phone Digit Generator",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "cwd": "${workspaceFolder}/example/go/idiomatic/phone",
+            "program": "${workspaceFolder}/example/go/idiomatic/phone/internal/digit-gen.go"
+        },
         {
             "name": "ISO Generator",
             "type": "go",
